# tech-notes

./: README.md
Bayesian/: README.md
Designing-Data-Intensive-Applications/: README.md
Gaussian-Processes-for-Machine-Learning/: Gaussian_Process.py
PRML/: README.md
R_EmpiricalAnalysis/: README.md
R_statictics/: README.md
R_statistics/: README.md
R_statistics_multi_variable/: README.md  ch10_work.R  ch11.R  ch11_work.R  ch12.R  ch12_work.R  ch13.R  ch13_work.R  ch14.R  ch14_work.R
R_statistics_one_variable/: README.md  ch15.R
book-r-stan-bayesian-model-intro/: README.md
book_algorithm_solution/: README.md
building-ml-system/: README.md
castella_book/: README.md
cythonbook/: README.md
data-analyse-100-knocks/: README.md
data-science-on-aws/: README.md
ddd_introduction/: README.md
deep-learning-from-scratch-3/: .gitignore
deep-learning-with-python-notebooks/: 2.1-a-first-look-at-a-neural-network.ipynb  3.5-classifying-movie-reviews.ipynb  5.2-using-convnets-with-small-datasets.ipynb  5.3-using-a-pretrained-convnet.ipynb  6.1-one-hot-encoding-of-words-or-characters.ipynb  6.1-using-word-embeddings.ipynb  6.2-understanding-recurrent-neural-networks.ipynb  8.1-text-generation-with-lstm.ipynb  8.2-deep-dream.ipynb  8.3-neural-style-transfer.ipynb  chapter2.ipynb  chapter3.ipynb  chapter4.ipynb  chapter5.ipynb  chapter6.ipynb  chapter7.ipynb  chapter8.ipynb
designing-machine-learning-systems-book/: README.md
llm-book/src/: pyproject.toml
llm-book/src/src/: ch1.ipynb  ch2.ipynb  ch3.ipynb  ch5.ipynb  ch6.ipynb  ch7.ipynb  ch8.ipynb
(+950 files in other folders)
