[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nsakki55", email = "n.sakki55@gmail.com" }
]
dependencies = [
    "transformers>=4.44.2",
    "torch==2.0.1",
    "notebook>=7.2.1",
    "pip>=24.2",
    "sentencepiece>=0.2.0",
    "ja>=1.1.0",
    "protobuf>=5.27.3",
    "matplotlib>=3.9.2",
    "japanize-matplotlib>=1.1.3",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "src:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.2",
]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
type = "index"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/src"]
